@@ -7,8 +7,8 @@ import io.cucumber.java.en.Then;
 import io.cucumber.java.en.When;
 import org.jsoup.nodes.Document;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 
@@ -19,14 +19,14 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 public class MultipleDocumentsSteps {
     private CompletableFuture<Set<Document>> future;
     private Set<Document> fetched;
-    private Map<URL, Document> map = new HashMap<>();
+    private Map<URI, Document> map = new HashMap<>();
     private int failures;
 
     @Given("I scheduled multiple fetching requests")
     public void setUpFetcher(DataTable data) {
         var urls = data.asList()
             .stream()
-            .map(MultipleDocumentsSteps::toURL)
+            .map(MultipleDocumentsSteps::toURI)
             .peek(url -> map.put(url, new Document(url.toString())))
             .collect(toSet());
 
@@ -40,10 +40,10 @@ public class MultipleDocumentsSteps {
 
     @Given("I scheduled {int} fetching requests")
     public void setUpFetcher(int requests) {
-        var urls = new HashSet<URL>();
+        var urls = new HashSet<URI>();
 
         for (int idx = 0; idx < requests; idx++) {
-            var url = toURL(String.format("https://example_%d.com", idx));
+            var url = toURI(String.format("https://example_%d.com", idx));
             urls.add(url);
             map.put(url, idx < failures ? null : new Document(url.toString()));
         }
@@ -51,10 +51,10 @@ public class MultipleDocumentsSteps {
         future = new DocumentFetcher(url -> Optional.ofNullable(map.get(url))).fetchAsync(urls);
     }
 
-    private static URL toURL(String url) {
+    private static URI toURI(String url) {
         try {
-            return new URL(url);
-        } catch (MalformedURLException e) {
+            return new URI(url);
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
